added switch for startTraining fragment and created non functional training activity

--- a/app/src/main/res/layout/fragment_start_training.xml
+++ b/app/src/main/res/layout/fragment_start_training.xml
@@ -53,6 +53,16 @@
             app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_lesson"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_lesson" />
 
+        <TextView
+            android:id="@+id/tv_label_start_training_reverse"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/start_training_label_reverse_training"
+            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_knowledge_level"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />
+
         <Spinner
             android:id="@+id/sp_start_training_number_of_words"
             android:layout_width="wrap_content"
@@ -102,6 +112,17 @@
             app:layout_constraintStart_toEndOf="@+id/sp_start_training_knowledge_level_range"
             app:layout_constraintTop_toTopOf="@+id/tv_label_start_training_knowledge_level" />
 
+        <Switch
+            android:id="@+id/sw_start_training_reverse_training"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_reverse"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@+id/tv_label_start_training_reverse"
+            app:layout_constraintTop_toTopOf="@+id/tv_label_start_training_reverse" />
 
         <Button
             android:id="@+id/bt_start_training"
@@ -113,7 +134,7 @@
             android:text="@string/start_training_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_reverse" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
