--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -3,22 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.quote.StatisticsFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/statistics_label_words_by_level" />
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:text="@string/statistics_label_words_by_level"
+            android:textAlignment="center" />
 
         <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/chart"
+            android:id="@+id/chart_word_count"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" />
+            android:layout_margin="8dp" />
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/statistics_label_activity"
+            android:textAlignment="center" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart_activity"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_margin="4dp" />
+
     </LinearLayout>
+    </ScrollView>
 </layout>
