--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="ic_delete">30dp</dimen>
     <dimen name="padd_10">10dp</dimen>
+
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
