show correct widget text

--- a/app/src/main/res/layout/cula_widget.xml
+++ b/app/src/main/res/layout/cula_widget.xml
@@ -1,21 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
     <TextView
-        android:id="@+id/appwidget_text"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_widget_last_learned"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="#09C"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
+        android:layout_margin="4dp"
+        android:contentDescription="@string/widget_description_last_learned"
+        android:textSize="20sp"
         android:textStyle="bold|italic" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tv_widget_lesson_proposal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:contentDescription="@string/widget_description_worst_lesson"
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
+
+</LinearLayout>
