--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/activity_training"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.sliebald.cula.ui.training.TrainingActivity">
