--- a/app/src/main/res/layout/activity_update_lesson.xml
+++ b/app/src/main/res/layout/activity_update_lesson.xml
@@ -10,6 +10,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/activity_update_lesson"
             tools:context="com.sliebald.cula.ui.updateLibrary.UpdateLibraryActivity">
 
             <TextView
