--- a/app/src/main/res/layout/library_item.xml
+++ b/app/src/main/res/layout/library_item.xml
@@ -40,7 +40,7 @@
         android:background="@android:color/white"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="horizontal">
 
         <TextView
@@ -51,7 +51,7 @@
             android:layout_marginStart="24dp"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
-            android:textAppearance="?attr/textAppearanceListItem"
+            android:textAppearance="?android:attr/textAppearanceListItem"
             tools:text="language" />
 
         <View
@@ -69,7 +69,7 @@
             android:layout_marginStart="24dp"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
-            android:textAppearance="?attr/textAppearanceListItem"
+            android:textAppearance="?android:attr/textAppearanceListItem"
             tools:text="foreignWord" />
     </LinearLayout>
 
