--- a/app/src/main/res/layout/cula_widget.xml
+++ b/app/src/main/res/layout/cula_widget.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/widget"
     android:background="@color/colorPrimary"
-    android:padding="@dimen/widget_margin">
+    android:padding="@dimen/widget_margin"
+    tools:ignore="Overdraw">
 
     <TextView
         android:id="@+id/tv_widget_last_learned"
