extracted dimensions to resource

--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -13,7 +13,7 @@
             android:id="@+id/tv_label_translate_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/distance_medium"
             android:text="@string/activity_training_label_translate_word"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,18 +23,17 @@
             android:id="@+id/tv_label_word_to_translate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/distance_normal"
+            android:layout_marginStart="@dimen/distance_normal"
+            android:layout_marginTop="@dimen/distance_normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_translate_word" />
 
         <EditText
             android:id="@+id/et_translated_word"
-            android:layout_width="200dp"
+            android:layout_width="@dimen/training_translation_edit_text_width"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="@string/activity_training_hint_translated_word"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +45,7 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/distance_normal"
             android:onClick="checkWord"
             android:text="@string/activity_training_button_check"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +56,7 @@
             android:id="@+id/tv_label_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/distance_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bt_check" />
