--- a/app/src/main/res/layout/fragment_start_training.xml
+++ b/app/src/main/res/layout/fragment_start_training.xml
@@ -14,9 +14,9 @@
             style="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="@dimen/distance_medium"
+            android:layout_marginStart="@dimen/distance_medium"
+            android:layout_marginTop="@dimen/distance_medium"
             android:text="@string/start_training_label_instructions"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,10 +25,10 @@
         <TextView
             android:id="@+id/tv_label_start_training_number_of_words"
             style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="140dp"
+            android:layout_width="@dimen/label_width_startTraining"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="@dimen/distance_medium"
+            android:layout_marginTop="@dimen/distance_large"
             android:text="@string/start_training_label_number_of_words"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_instructions" />
@@ -36,9 +36,9 @@
         <TextView
             android:id="@+id/tv_label_start_training_lesson"
             style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="140dp"
+            android:layout_width="@dimen/label_width_startTraining"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/distance_medium"
             android:text="@string/start_training_label_lesson"
             app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_number_of_words"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_number_of_words" />
@@ -46,9 +46,9 @@
         <TextView
             android:id="@+id/tv_label_start_training_knowledge_level"
             style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="140dp"
+            android:layout_width="@dimen/label_width_startTraining"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/distance_medium"
             android:text="@string/start_training_label_knowledge_level"
             app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_lesson"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_lesson" />
@@ -56,9 +56,9 @@
         <TextView
             android:id="@+id/tv_label_start_training_reverse"
             style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="140dp"
+            android:layout_width="@dimen/label_width_startTraining"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/distance_medium"
             android:text="@string/start_training_label_reverse_training"
             app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_knowledge_level"
             app:layout_constraintTop_toBottomOf="@+id/sp_start_training_knowledge_level_range" />
@@ -66,7 +66,7 @@
         <Spinner
             android:id="@+id/sp_start_training_number_of_words"
             android:layout_width="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/distance_normal"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_number_of_words"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +78,7 @@
             android:id="@+id/sp_start_training_lesson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxWidth="200dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/distance_normal"
             app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_lesson"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
@@ -90,8 +89,8 @@
             android:id="@+id/sp_start_training_knowledge_level_range"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="@dimen/distance_normal"
+            android:layout_marginTop="@dimen/distance_small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.33"
             app:layout_constraintStart_toStartOf="parent"
@@ -101,8 +100,8 @@
             android:id="@+id/sp_start_training_knowledge_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="@dimen/distance_normal"
+            android:layout_marginStart="@dimen/distance_small"
             app:layout_constraintBottom_toBottomOf="@+id/sp_start_training_knowledge_level_range"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.1"
@@ -113,8 +112,8 @@
             android:id="@+id/sw_start_training_reverse_training"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="@dimen/distance_normal"
+            android:layout_marginStart="@dimen/distance_normal"
             app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_reverse"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
@@ -126,7 +125,7 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/distance_large"
             android:focusable="true"
             android:text="@string/start_training_button"
             app:layout_constraintEnd_toEndOf="parent"
