--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -17,32 +17,32 @@
             android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:text="@string/statistics_label_words_by_level"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/distance_normal"
+            android:layout_marginStart="@dimen/distance_normal"
+            android:layout_marginTop="@dimen/distance_normal"
             android:textAlignment="center" />
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chart_word_count"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_margin="8dp" />
+            android:layout_height="@dimen/statistics_chart_word_count_height"
+            android:layout_margin="@dimen/distance_normal" />
 
         <TextView
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="@dimen/distance_normal"
+            android:layout_marginStart="@dimen/distance_normal"
+            android:layout_marginTop="@dimen/distance_medium"
             android:text="@string/statistics_label_activity"
             android:textAlignment="center" />
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart_activity"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_margin="8dp" />
+            android:layout_height="@dimen/statistics_chart_activity_height"
+            android:layout_margin="@dimen/distance_normal" />
 
     </LinearLayout>
     </ScrollView>
