--- a/app/src/main/res/layout/activity_update_lesson.xml
+++ b/app/src/main/res/layout/activity_update_lesson.xml
@@ -18,9 +18,9 @@
                 style="@style/Label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="@dimen/distance_medium"
+                android:layout_marginStart="@dimen/distance_medium"
+                android:layout_marginTop="@dimen/distance_normal"
                 android:text="@string/update_lesson_label_name"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -31,13 +31,13 @@
                 android:id="@+id/et_add_lesson_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginEnd="@dimen/distance_xLarge"
+                android:layout_marginStart="@dimen/distance_xLarge"
                 android:hint="@string/update_lesson_hint_name"
                 android:inputType="text"
                 android:nextFocusForward="@id/et_add_lesson_description"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
+                android:paddingEnd="@dimen/distance_medium"
+                android:paddingStart="@dimen/distance_medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_add_lesson_name" />
@@ -47,9 +47,9 @@
                 style="@style/Label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="@dimen/distance_medium"
+                android:layout_marginStart="@dimen/distance_medium"
+                android:layout_marginTop="@dimen/distance_normal"
                 android:text="@string/update_lesson_label_description"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +62,8 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/update_lesson_hint_description"
                 android:inputType="text"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
+                android:paddingEnd="@dimen/distance_medium"
+                android:paddingStart="@dimen/distance_medium"
                 app:layout_constraintEnd_toEndOf="@+id/et_add_lesson_name"
                 app:layout_constraintStart_toStartOf="@+id/et_add_lesson_name"
                 app:layout_constraintTop_toBottomOf="@+id/tv_label_add_lesson_description" />
@@ -73,7 +73,7 @@
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/distance_normal"
                 android:focusable="true"
                 android:onClick="commitLessonEntry"
                 android:text="@string/update_library_button_save_word"
@@ -87,8 +87,8 @@
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/distance_normal"
+                android:layout_marginTop="@dimen/distance_normal"
                 android:focusable="true"
                 android:onClick="returnWithoutSave"
                 android:text="@string/button_return"
@@ -101,9 +101,9 @@
                 style="@style/Label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginEnd="@dimen/distance_medium"
+                android:layout_marginStart="@dimen/distance_medium"
+                android:layout_marginTop="@dimen/distance_medium"
                 android:text="@string/update_lesson_label_mapping"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
