--- a/app/src/main/res/layout/fragment_quote.xml
+++ b/app/src/main/res/layout/fragment_quote.xml
@@ -12,12 +12,12 @@
             android:id="@+id/quote_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginBottom="@dimen/distance_normal"
+            android:layout_marginEnd="@dimen/distance_large"
+            android:layout_marginStart="@dimen/distance_large"
+            android:layout_marginTop="@dimen/distance_xxxLarge"
             android:textAlignment="center"
-            android:textSize="24sp"
+            android:textSize="@dimen/textSize_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,10 +27,10 @@
             android:id="@+id/quote_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/distance_medium"
+            android:layout_marginTop="@dimen/distance_normal"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/textSize_small"
             app:layout_constraintStart_toStartOf="@+id/quote_text"
             app:layout_constraintTop_toBottomOf="@+id/quote_text"
             tools:text="Author" />
