--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -21,7 +21,7 @@
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/secondaryColor"
-        android:textSize="80sp"
+        android:textSize="@dimen/textSize_xxLarge"
         android:textStyle="bold" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:gravity="center_horizontal"
         android:text="@string/app_name_full"
         android:textColor="@color/secondaryColor"
-        android:textSize="16sp"
+        android:textSize="@dimen/textSize_small"
         android:textStyle="bold" />
 
 </LinearLayout>
