--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,28 @@
     <dimen name="padd_10">10dp</dimen>
 
     <dimen name="widget_margin">0dp</dimen>
+    <dimen name="widget_minHeight">40dp</dimen>
+    <dimen name="widget_minWidth">320dp</dimen>
+
+    <dimen name="distance_small">4dp</dimen>
+    <dimen name="distance_normal">8dp</dimen>
+    <dimen name="distance_medium">16dp</dimen>
+    <dimen name="distance_large">24dp</dimen>
+    <dimen name="distance_xLarge">32dp</dimen>
+    <dimen name="distance_xxxLarge">64dp</dimen>
+
+    <dimen name="training_translation_edit_text_width">200dp</dimen>
+
+    <dimen name="textSize_small">14sp</dimen>
+    <dimen name="textSize_normal">18sp</dimen>
+    <dimen name="textSize_medium">22sp</dimen>
+    <dimen name="textSize_xxLarge">80sp</dimen>
+
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="fab_elevation_translationZ">6dp</dimen>
+
+    <dimen name="label_width_startTraining">140dp</dimen>
+    <dimen name="statistics_chart_word_count_height">300dp</dimen>
+    <dimen name="statistics_chart_activity_height">300dp</dimen>
+
 </resources>
