--- a/app/src/main/res/xml/cula_widget_info.xml
+++ b/app/src/main/res/xml/cula_widget_info.xml
@@ -2,8 +2,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/cula_widget"
     android:initialLayout="@layout/cula_widget"
-    android:minHeight="40dp"
-    android:minWidth="320dp"
+    android:minHeight="@dimen/widget_minHeight"
+    android:minWidth="@dimen/widget_minWidth"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
