upgrade to androidx dependencies

--- a/app/src/main/res/layout/activity_update_library.xml
+++ b/app/src/main/res/layout/activity_update_library.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/activity_update_library"
@@ -162,5 +162,5 @@
             app:layout_constraintStart_toEndOf="@id/button_add_word_pair"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
