--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.settings.SettingsFragment">
 
-    <android.support.v7.preference.PreferenceCategory android:title="Language Settings" />
+    <androidx.preference.PreferenceCategory android:title="Language Settings" />
     <ListPreference
         android:defaultValue="@string/settings_select_language_default"
         android:entries="@array/languages"
@@ -26,7 +26,7 @@
         android:summary="@string/settings_delete_language_summary"
         android:title="@string/settings_delete_language_title" />
 
-    <android.support.v7.preference.PreferenceCategory android:title="Default Settings" />
+    <androidx.preference.PreferenceCategory android:title="Default Settings" />
 
     <ListPreference
         android:defaultValue="@string/settings_default_knowledgeLevel_default"
@@ -35,4 +35,4 @@
         android:key="@string/settings_default_knowledgeLevel_key"
         android:summary="@string/settings_default_knowledgeLevel_summary"
         android:title="@string/settings_default_knowledgeLevel_title" />
-</android.support.v7.preference.PreferenceScreen>
+</androidx.preference.PreferenceScreen>
