--- a/app/src/main/res/layout/fragment_start_training.xml
+++ b/app/src/main/res/layout/fragment_start_training.xml
@@ -11,12 +11,7 @@
 
         <TextView
             android:id="@+id/tv_label_start_training_instructions"
-            style="@style/TextAppearance.AppCompat.Headline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/distance_medium"
-            android:layout_marginStart="@dimen/distance_medium"
-            android:layout_marginTop="@dimen/distance_medium"
+            style="@style/LabelHeadline"
             android:text="@string/start_training_label_instructions"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,101 +19,67 @@
 
         <TextView
             android:id="@+id/tv_label_start_training_number_of_words"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="@dimen/label_width_startTraining"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/distance_medium"
-            android:layout_marginTop="@dimen/distance_large"
+            style="@style/LabelStartTraining"
             android:text="@string/start_training_label_number_of_words"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_instructions" />
 
-        <TextView
-            android:id="@+id/tv_label_start_training_lesson"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="@dimen/label_width_startTraining"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/distance_medium"
-            android:text="@string/start_training_label_lesson"
-            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_number_of_words"
+        <Spinner
+            android:id="@+id/sp_start_training_number_of_words"
+            style="@style/SpinnerStartTraining"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_number_of_words" />
 
         <TextView
-            android:id="@+id/tv_label_start_training_knowledge_level"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="@dimen/label_width_startTraining"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/distance_medium"
-            android:text="@string/start_training_label_knowledge_level"
-            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_lesson"
-            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_lesson" />
-
-        <TextView
-            android:id="@+id/tv_label_start_training_reverse"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="@dimen/label_width_startTraining"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/distance_medium"
-            android:text="@string/start_training_label_reverse_training"
-            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_knowledge_level"
-            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_knowledge_level_range" />
-
-        <Spinner
-            android:id="@+id/sp_start_training_number_of_words"
-            android:layout_width="wrap_content"
-            android:layout_marginStart="@dimen/distance_normal"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_number_of_words"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toEndOf="@+id/tv_label_start_training_number_of_words"
-            app:layout_constraintTop_toTopOf="@+id/tv_label_start_training_number_of_words" />
+            android:id="@+id/tv_label_start_training_lesson"
+            style="@style/LabelStartTraining"
+            android:text="@string/start_training_label_lesson"
+            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_number_of_words"
+            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_number_of_words" />
 
         <Spinner
             android:id="@+id/sp_start_training_lesson"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/distance_normal"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_lesson"
+            style="@style/SpinnerStartTraining"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toEndOf="@+id/tv_label_start_training_lesson"
-            app:layout_constraintTop_toTopOf="@+id/tv_label_start_training_lesson" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_lesson" />
+
+        <TextView
+            android:id="@+id/tv_label_start_training_knowledge_level"
+            style="@style/LabelStartTraining"
+            android:text="@string/start_training_label_knowledge_level"
+            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_lesson"
+            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_lesson" />
 
         <Spinner
             android:id="@+id/sp_start_training_knowledge_level_range"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/distance_normal"
-            android:layout_marginTop="@dimen/distance_small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.33"
+            style="@style/SpinnerStartTraining"
+            app:layout_constraintEnd_toStartOf="@+id/sp_start_training_knowledge_level"
+            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />
 
         <Spinner
             android:id="@+id/sp_start_training_knowledge_level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/distance_normal"
-            android:layout_marginStart="@dimen/distance_small"
-            app:layout_constraintBottom_toBottomOf="@+id/sp_start_training_knowledge_level_range"
+            style="@style/SpinnerStartTraining"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toEndOf="@+id/sp_start_training_knowledge_level_range"
-            app:layout_constraintTop_toTopOf="@+id/sp_start_training_knowledge_level_range" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />
+
+        <TextView
+            android:id="@+id/tv_label_start_training_reverse"
+            style="@style/LabelStartTraining"
+            android:text="@string/start_training_label_reverse_training"
+            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_knowledge_level"
+            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_knowledge_level_range" />
 
         <Switch
             android:id="@+id/sw_start_training_reverse_training"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/distance_normal"
-            android:layout_marginStart="@dimen/distance_normal"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_reverse"
+            android:layout_marginStart="@dimen/distance_medium"
+            android:layout_marginTop="@dimen/distance_small"
+            android:layout_marginEnd="@dimen/distance_medium"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toEndOf="@+id/tv_label_start_training_reverse"
-            app:layout_constraintTop_toTopOf="@+id/tv_label_start_training_reverse" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_reverse" />
 
         <Button
             android:id="@+id/bt_start_training"
